--- a/contactme.html
+++ b/contactme.html
@@ -12,7 +12,7 @@
     <li><em>Email -</em><mark>abhishek.agc966@gmail.com</mark></li>
   </ul>
   <figure>
-    <img src="C:\Users\abhishek\Downloads\flami.jpg" alt="Flamingo" usemap=#Flamingo >
+    <img src="flami.jpg" alt="Flamingo" usemap=#Flamingo >
     <figcaption>
       A Flamingo in water
     </figcaption>
