--- a/ind.html
+++ b/ind.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-      <img src="C:\Users\abhishek\Downloads\jk.jpg" alt="Pro pic" height="200" width="200">
+      <img src="jk.jpg" alt="Pro pic" height="200" width="200">
       </td>
       <td>
         <h1>Abhishek Jha</h1>
@@ -33,7 +33,7 @@
   <ul>
     <li>12th From CBSE Delhi</li>
     <li> Diploma in <mark>Automobile Engineering </mark> from Pusa Polytechnic</li>
-    <li> Pursuing Btech(CSE) From<a href="https://www.dpgitm.com/"><img src="C:\Users\abhishek\Pictures\download.jpg " style=
+    <li> Pursuing Btech(CSE) From<a href="https://www.dpgitm.com/"><img src="download.jpg " style=
       "width: 42px; height:42px;border0;"target="_blank">Dpgitm Gurugram</a> </li>
 <br />
 <hr size="3" color="pink" />
@@ -55,7 +55,7 @@
     </li>
     <br />
     <hr size="3" color="pink" />
-<a href="C:\Users\abhishek\Desktop\Newweb\htmlpersonal\contactme.html" target="_blank"><strong>Contact me</strong></a>
+<a href="contactme.html" target="_blank"><strong>Contact me</strong></a>
 <h3><em>Work experience</em></h3>
 <table  border="1" cellpadding="10">
 
